--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/ic_placeholder_2"
+        android:label="Phindee"
+        android:roundIcon="@drawable/ic_placeholder_round"
         android:theme="@style/Theme.Project"
         android:targetSdkVersion="33"
         tools:targetApi="33">
