--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,17 @@
         android:targetSdkVersion="33"
         tools:targetApi="33">
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.project.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
+
         <!-- 📌 Reminder BroadcastReceiver -->
         <receiver
             android:name=".E5_Calendar_ReminderBroadcastReceiver"
